tests/reference/asr-incorrect_type_where_03-a95b1f2.stderr
semantic error: 'where' clause requires a logical array
 --> tests/errors/incorrect_type_where_03.f90:5:10
  |
5 |    where(max(1.33, 2.67)) b = 12121
  |          ^^^^^^^^^^^^^^^ 
